--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "ngx-swiper-wrapper": "^10.0.0",
     "rxjs": "~6.4.0",
+    "swiper": "^6.5.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
