--- a/angular.json
+++ b/angular.json
@@ -158,6 +158,10 @@
               "devServerTarget": "store:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {}
         }
       }
     }
