--- a/firebase.json
+++ b/firebase.json
@@ -1,19 +1,16 @@
 {
-  "hosting": [
-    {
-      "target": "store",
-      "public": "dist/store",
-      "ignore": [
+    "hosting": {
+        "public": "dist/store",
+        "ignore": [
         "firebase.json",
         "**/.*",
         "**/node_modules/**"
-      ],
-      "rewrites": [
-        {
-          "source": "**",
-          "destination": "/index.html"
-        }
-      ]
+        ],
+        "rewrites": [
+            {
+                "source": "**",
+                "destination": "/index.html"
+            }
+        ]
     }
-  ]
 }
